--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==5.0.1
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
-psycopg2-binary==2.9.9
+psycopg[binary]>=3.1.0
 python-decouple==3.8
 google-generativeai==0.3.2
 Pillow==10.4.0
